--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=aws-cicd
+spring.application.name=userservice-kubernetes
 server.port=8085
 
 spring.datasource.url=jdbc:h2:mem:devdb
