--- a/kubernetes_files/k8s-app-namespace-deployment.yaml
+++ b/kubernetes_files/k8s-app-namespace-deployment.yaml
@@ -1,21 +1,27 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: user-dev
 ---
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: userservice-rs
+  name: userservice-deployment
+  namespace: user-dev
 spec:
-  replicas: 3
   selector:
     matchLabels:
       app: userservice-pod
+  replicas: 2
   template:
     metadata:
       labels:
         app: userservice-pod
     spec:
       containers:
-        - name: userservice-container
+        - name: user-service-container
           image: javaexpress/userservice:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8085
 ---
@@ -23,11 +29,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: userservice-service
+  namespace: user-dev
 spec:
-  type: LoadBalancer
   selector:
     app: userservice-pod
   ports:
-    - port: 8085 # any port number you can define
+    - protocol: TCP
+      port: 9090
       targetPort: 8085
-...
+  type: LoadBalancer
+---
