--- a/kubernetes_files/k8s-app.yaml
+++ b/kubernetes_files/k8s-app.yaml
@@ -1,27 +1,28 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: user-dev
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userservice-deployment
-  namespace: user-dev
 spec:
   selector:
     matchLabels:
       app: userservice-pod
-  replicas: 2
+  replicas: 10
+  strategy:
+    rollingUpdate:
+      maxSurge: 75%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
+      name: userservice-pod
       labels:
         app: userservice-pod
     spec:
       containers:
         - name: user-service-container
-          image: javaexpress/userservice:latest
-          imagePullPolicy: IfNotPresent
+          image: 'javaexpress/userservice:1.0.0'
+          imagePullPolicy: Always
           ports:
             - containerPort: 8085
 ---
@@ -30,11 +31,11 @@ kind: Service
 metadata:
   name: userservice-service
 spec:
+  type: LoadBalancer
   selector:
     app: userservice-pod
   ports:
     - protocol: TCP
       port: 8085
       targetPort: 8085
-  type: LoadBalancer
 ---
